Actions
Bug #9786
closedloader.efi: enumeration value 'EfiMaxMemoryType' not handled in switch
Start date:
2018-09-02
Due date:
% Done:
100%
Estimated time:
Difficulty:
Medium
Tags:
Gerrit CR:
External Bug:
Description
Error when warnings enabled:
../env.c: In function 'efi_memory_type': ../env.c:405:2: error: enumeration value 'EfiMaxMemoryType' not handled in switch [-Werror=switch] switch (type) { ^~~~~~
Updated by Electric Monk about 5 years ago
- Status changed from In Progress to Closed
- % Done changed from 90 to 100
git commit 0e8ce6ee7524ee6c2c24a2d4ed28ea71a5dcd85e
commit 0e8ce6ee7524ee6c2c24a2d4ed28ea71a5dcd85e Author: Toomas Soome <tsoome@me.com> Date: 2018-09-10T13:01:48.000Z 9786 loader.efi: enumeration value 'EfiMaxMemoryType' not handled in switch Reviewed by: Igor Kozhukhov <igor@dilos.org> Reviewed by: Andy Fiddaman <omnios@citrus-it.co.uk> Reviewed by: Gergő Mihály Doma <domag02@gmail.com> Approved by: Dan McDonald <danmcd@joyent.com>
Actions