9786 loader.efi: enumeration value 'EfiMaxMemoryType' not handled in switch Reviewed by: Igor Kozhukhov <igor@dilos.org> Reviewed by: Andy Fiddaman <omnios@citrus-it.co.uk> Reviewed by: Gergő Mihály Doma <domag02@gmail.com> Approved by: Dan McDonald <danmcd@joyent.com>